@@ -26,6 +26,7 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.3.2",
     "rxjs": "~6.2.0",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
