@@ -27,11 +27,11 @@
         </div>
         <div>
           <strong>Last Active:</strong>
-          <p>{{user.lastActive}}</p>
+          <p>{{user.lastActive|timeAgo}}</p>
         </div>
         <div>
           <strong>Memeber since:</strong>
-          <p>{{user.created}}</p>
+          <p>{{user.created|date:'mediumDate'}}</p>
         </div>
       </div>
 
